Fixed w-vertical-form so that the alignment classes (e.g. w-center) can also be used on this element.

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -89,11 +89,14 @@ input[type="file"] {
 */
 
 .w-vertical-form {
-
+	
+	width: @form-width;
+	
 	form {
 
-		width: @form-width;
-
+		width: @form-width; //'inner-box only, may expand with padding'
+		text-align: left; //'explicitly set text-alignment in case in case the parent div has an alignment class set'
+		
 		fieldset {
 			border: 0;
 			margin: 0;
@@ -171,10 +174,16 @@ input[type="file"] {
 
 }
 
+.w-test {
+	text-align: center; display: block; margin-left: auto!important; margin-right: auto!important; 
+	form {
+		text-align: left;
+	}
+}
+
 .w-background-form {
 	padding: 20px 40px 20px 40px;
 	background-color: @light;
-	display:inline-block;
 }
 
 /*
